test/libsolidity/syntaxTests/contractBaseLocation/layout_specification_no_expression.sol
contract C layout at { }
// ----
// ParserError 6933: (21-22): Expected primary expression.
